# CMakeKoans

./: CMakeLists.txt  README.md
koans/: CMakeLists.txt
koans/__scripts__/: KoanAssert.cmake
koans/custom_target/: CMakeLists.txt
koans/generated_sources/: CMakeLists.txt  summarize_koans.cpp.in
koans/simple_exe/: CMakeLists.txt  CMakeStuff.txt  simple_cat.cpp
koans/static_lib/: CMakeLists.txt
koans/static_lib/inc/: prettify.h
koans/static_lib/src/: prettify.cpp
koans/var_scopes/: CMakeLists.txt
koans/var_scopes/nested/: CMakeLists.txt
